test/parallel/forall/task-private-vars/use-before-def.chpl


forall loc in Locales with
  (var tpv1 = tpv2,
   var tpv2 = 5)
{
  writeln(tpv1, tpv2);
}
